tests/fixtures/errors/unresolved_row_ref.norm
:root
:data
x
@99

:items
pk,name
1,alpha
